Mon May 10 02:58:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_compile_each), vm_insnhelper.c (vm_invoke_block,
	  vm_throw): allow "return" and "yield" even in singleton class
	  definition.  based on a patch from wanabe <s.wanabe AT gmail.com>
	  for "return".  [ruby-core:21379] [ruby-dev:40975]

	* insns.def (defineclass): ditto (straightforwardly push block ptr,
	  instead of dfp ptr with special flag).

	* vm_core.h (RUBY_VM_CLASS_SPECIAL_P): ditto (no longer needed).

	* proc.c (proc_new): ditto (remove handling for special flag).

	* bootstraptest/test_jump.rb: add tests for above.

Mon May 10 02:29:51 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* cont.c (fiber_switch): raise FiberError when returning to dead
	  fiber.  [ruby-dev:40833]

Mon May 10 02:07:20 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/thread.rb (ConditionVariable#wait): ensure to remove the current
	  thread from waiters.  [ruby-core:29835]

Mon May 10 00:54:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_set_raw): new method.

	* ext/io/console/console.c (ttymode): reverted previous commit.

Sun May  9 23:53:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_GC_GUARD_PTR): get rid of removal by
	  optimization.

Sun May  9 23:07:53 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (proc_dup): copy blockprocval.  proc_dup is used by
	  define_method, which made blockprocval be GC'ed mistakenly.
	  [ruby-core:30023]

Sun May  9 16:28:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (fiber_initialize_machine_stack_context): try to release
	  unnecessary fibers and retry to create.  based on a patch from
	  masaya tarui at [ruby-dev:41230].

Sun May  9 08:32:56 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/generator/generator.c (fbuffer_inc_capa):
	  fix tha use of REALLOC_N. [ruby-dev:41227]

Sun May  9 09:30:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
